Text_clustering/ICTC/outputs_train/slurmoutput12462422.out
============================================================================================== 
Warning! Mixing Conda and module environments may lead to corruption of the
user environment. 
We do not recommend users mixing those two environments unless absolutely
necessary. Note that 
SURF does not provide any support for Conda environment.
For more information, please refer to our software policy page:
https://servicedesk.surf.nl/wiki/display/WIKI/Software+policy+Snellius#SoftwarepolicySnellius-UseofAnacondaandMinicondaenvironmentsonSnellius 

Remember that many packages have already been installed on the system and can
be loaded using 
the 'module load <package__name>' command. If you are uncertain if a package is
already available 
on the system, please use 'module avail' or 'module spider' to search for it.
============================================================================================== 
python-dotenv could not parse statement starting at line 1
Traceback (most recent call last):
  File "/gpfs/home3/scur0274/Text_clustering/ICTC/step1/blip2/model.py", line 24, in <module>
    from utils.argument import args
  File "/gpfs/home3/scur0274/Text_clustering/ICTC/utils/argument.py", line 26
    parser.add_argument('--filter-file', type=str, help='File containing filter value'
                       ^
SyntaxError: '(' was never closed

JOB STATISTICS
==============
Job ID: 12462422
Cluster: snellius
User/Group: scur0274/scur0274
State: FAILED (exit code 1)
Nodes: 1
Cores per node: 18
CPU Utilized: 00:00:03
CPU Efficiency: 1.52% of 00:03:18 core-walltime
Job Wall-clock time: 00:00:11
Memory Utilized: 1.64 MB
Memory Efficiency: 0.00% of 120.00 GB (120.00 GB/node)
